Archive2/9b/5b42bf23250208/output
main.cpp:6:9: error: member function 'g' not viable: 'this' argument has type 'const A', but function is not marked const
        g(); // enforced semantic error
        ^
main.cpp:8:10: note: 'g' declared here
    void g() {}
         ^
1 error generated.
