Archive2/9b/5b42bf23250208/main.cpp
#include <stdexcept>
#include <vector>

struct A {
    void f() const {
        g(); // enforced semantic error
    }
    void g() {}
};



int main(int argc, char** argv) {
    return 0;
}